GST.GearShift/GearShift_CommLibrary/GearShiftCommLib/CAN_Functionality.h

  extern "C" __declspec( dllexport ) UINT32   UsbCANGetDevTxBuffFill( void );
  extern "C" __declspec( dllexport ) UINT32   UsbCANGetDevTxBuffSize( void );